cmake_minimum_required(VERSION 3.12)

set(PICO_SDK_PATH "/pico-sdk")
set(PICO_BOARD "pico_w")
#set(PICO_CXX_ENABLE_EXCEPTIONS 1)
#set(PICO_CXX_ENABLE_RTTI 1)

# Pull in SDK (must be before project)
include(pico_sdk_import.cmake)
include(pico_extras_import_optional.cmake)

set(PROJECT_NAME "silvanus-pico")

project(${PROJECT_NAME} C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

if (PICO_SDK_VERSION_STRING VERSION_LESS "1.3.0")
    message(FATAL_ERROR "Raspberry Pi Pico SDK version 1.3.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
endif()

# Initialize the SDK
pico_sdk_init()

add_executable(${PROJECT_NAME}
        Silvanus.cpp
        Color.cpp
        Settings.cpp
        deps/baselib/crc64.c
        # Include hpp files to help intellisense
        Button.hpp
        Color.hpp
        PioProgram.hpp
        Settings.hpp
)

pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/ws2812b.pio)

target_include_directories(${PROJECT_NAME} PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
)

target_link_libraries(${PROJECT_NAME}
        pico_stdio 
        pico_stdlib
        pico_multicore
        hardware_flash
        hardware_rtc
        pico_time
        pico_sync 
        hardware_pio
        pico_cyw43_arch_lwip_poll
)

# Configure USB for stdio (disables uart)
pico_enable_stdio_usb(${PROJECT_NAME} 1)
pico_enable_stdio_uart(${PROJECT_NAME} 0)

# create map/bin/hex file etc.
pico_add_extra_outputs(${PROJECT_NAME})
